--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr"></html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Nina Carducci - Photographe professionnelle </title>
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css ">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
