--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr"></html>
-<html>
+<html lang="fr">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Nina Carducci - Photographe professionnelle </title>
@@ -36,13 +36,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-100" alt="un pasager traversant la route">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"  class="d-block w-100 " alt="un pasager traversant la route">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-100" alt="une foule qui danse">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"  class="d-block w-100 " alt="une foule qui danse">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward.webp" class="d-block w-100 h-100" alt="des mariés qui dansent dans leur fête de mariage">
+				<img src="./assets/images/slider/edward.webp"  alt="des mariés qui dansent dans leur fête de mariage">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -155,8 +155,8 @@
 		</div>
 	</div>
 </footer>
+<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
    <script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.min.js"></script>
 	<script defer src="./assets/scripts.min.js"></script>
 </body>
