--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="fr">
 
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Nina Carducci - Photographe professionnelle </title>
+	<meta
+	name="description"
+	content="Site web de Nina Carducci, photographe capturant des moments uniques avec passion et créativité."
+  />
 
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css ">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
+ <!-- Meta donnés pour le référencement facebook -->
+
 	
 </head>
 <body>
@@ -22,7 +28,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt=""></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt="logo intagram"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -36,16 +42,19 @@
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"  class="d-block w-100 " alt="un pasager traversant la route">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"  class="d-block w-100 " alt="une foule qui danse">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"  alt="des mariés qui dansent dans leur fête de mariage">
-			</div>
-		</div>
+			<picture class="carousel-item active">
+				<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplashMobile_14_11zon.webp" media="(max-width: 768px)"/>
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"  class="d-block w-100 h-100" alt="un pasager traversant la route">
+			</picture>
+			<picture class="carousel-item">
+				<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplashMobile_11_11zon.webp" media="(max-width: 768px)"/>
+				<img  src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"  class="d-block w-100 " alt="une foule qui danse">
+			</picture>
+			<picture class="carousel-item">
+				<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplashMobile_6_11zon.webp" media="(max-width: 768px)"/>
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"  class="d-block w-100 " alt="des mariés qui dansent dans leur fête de mariage">
+			</picture>
+		</picture>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
@@ -71,15 +80,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="photo d'un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"alt="portrait d'un homme elegant"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"alt="portrait d'une femme souriante"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="photo des mains pris par hannah bushing"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="photo d'un homme prise par ade tunji"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"alt="photo de mariage"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="portrait de la fille nino"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="portrait d'un chanteur"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="photo d'une femme avec pc"/>
+			<img data-gallery-tag="Concert"   loading="lazy" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="photo d'un concert"/>
+			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"alt="portrait d'un homme elegant"/>
+			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"alt="portrait d'une femme souriante"/>
+			<img data-gallery-tag="Mariages"  loading="lazy" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="photo des mains pris par hannah bushing"/>
+			<img data-gallery-tag="Portrait"  loading="lazy" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="photo d'un homme prise par ade tunji"/>
+			<img data-gallery-tag="Mariages"  loading="lazy" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"alt="photo de mariage"/>
+			<img data-gallery-tag="Portrait"   loading="lazy"class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="portrait de la fille nino"/>
+			<img data-gallery-tag="Concert"  loading="lazy" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="portrait d'un chanteur"/>
+			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="photo d'une femme avec pc"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -142,11 +151,11 @@
 			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-				<label>Nom</label>
+				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
-				<label>Email</label>
+				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
-				<label>Message</label>
+				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				<input type="submit" value="Envoyer"/>
 			</form>
