--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
  <!-- Meta donnés pour le référencement facebook -->
     <meta property="og:title" content="Nina Carducci - Photographe professionnelle">
     <meta property="og:type" content="website">
@@ -72,7 +72,7 @@
 		<div class="carousel-inner">
 			<picture class="carousel-item active">
 				<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplashMobile_14_11zon.webp" media="(max-width: 768px)"/>
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"  class="d-block w-100 " alt="un pasager traversant la route">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"  class="d-block w-100 h-100 " alt="un pasager traversant la route">
 			</picture>
 			<picture class="carousel-item">
 				<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplashMobile_11_11zon.webp" media="(max-width: 768px)"/>
@@ -80,7 +80,7 @@
 			</picture>
 			<picture class="carousel-item">
 				<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplashMobile_6_11zon.webp" media="(max-width: 768px)"/>
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"  class="d-block w-100 " alt="des mariés qui dansent dans leur fête de mariage">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash (1)_11zon.webp"  class="d-block w-100 " alt="des mariés qui dansent dans leur fête de mariage">
 			</picture>
 		</picture>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -111,12 +111,12 @@
 		<div class="gallery" style="display: none">
 			<img data-gallery-tag="Concert"   loading="lazy" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplashMobile_1_11zon.webp" alt="photo d'un concert"/>
 			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplashMobile _11zon.webp"alt="portrait d'un homme elegant"/>
-			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"alt="portrait d'une femme souriante"/>
-			<img data-gallery-tag="Mariages"  loading="lazy" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="photo des mains pris par hannah bushing"/>
-			<img data-gallery-tag="Portrait"  loading="lazy" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="photo d'un homme prise par ade tunji"/>
+			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplashMobile_11zon.webp"alt="portrait d'une femme souriante"/>
+			<img data-gallery-tag="Mariages"  loading="lazy" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash (2)_11zon.webp" alt="photo des mains pris par hannah bushing"/>
+			<img data-gallery-tag="Portrait"  loading="lazy" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplas_11zon.webp" alt="photo d'un homme prise par ade tunji"/>
 			<img data-gallery-tag="Mariages"  loading="lazy" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"alt="photo de mariage"/>
-			<img data-gallery-tag="Portrait"   loading="lazy"class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp" alt="portrait de la fille nino"/>
-			<img data-gallery-tag="Concert"  loading="lazy" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="portrait d'un chanteur"/>
+			<img data-gallery-tag="Portrait"   loading="lazy"class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_11zon.webp" alt="portrait de la fille nino"/>
+			<img data-gallery-tag="Concert"  loading="lazy" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash (3)_11zon.webp" alt="portrait d'un chanteur"/>
 			<img data-gallery-tag="Entreprises"   loading="lazy" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="photo d'une femme avec pc"/>
 		</div>
 	</div>
