--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	name="description"
 	content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments."
   />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css ">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css ">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	 <!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
  <!-- Meta donnés pour le référencement facebook -->
     <meta property="og:title" content="Nina Carducci - Photographe professionnelle">
     <meta property="og:type" content="website">
