ajout d'attribut loading

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</picture>
 			<picture class="carousel-item">
 				<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplashMobile_11_11zon.webp" media="(max-width: 768px)"/>
-				<img  src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"  class="d-block w-100 " alt="une foule qui danse">
+				<img  src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash _11zon.webp"  class="d-block w-100 " alt="une foule qui danse">
 			</picture>
 			<picture class="carousel-item">
 				<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplashMobile_6_11zon.webp" media="(max-width: 768px)"/>
@@ -95,8 +95,8 @@
 </div>
 <section id="about">
 	<picture class="picture left">
-		<source srcset="./assets/images/slider/ninaMobile_12_11zon.webp" media="(max-width: 768px)"/>
-		<img src="./assets/images/nina.webp" loading="lazy" alt="La photographe Nina-Carducci">
+	 <!-- <source  srcset="./assets/images/slider/ninaMobile_12_11zon.webp" loading="lazy" media="(max-width: 768px)"/>  -->
+		<img src="./assets/images/nina.webp"  alt="La photographe Nina-Carducci">
 	</picture>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -190,7 +190,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp"  loading="lazy" alt="camera">
+			<img src="./assets/images/cameraa.webp"  loading="lazy" alt="camera">
 		</div>
 	</div>
 </footer>
