--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
-		  "@type": "Service",
+		  "@type": "ProfessionalService",
 		  "name": "Nina Carducci",
 		  "image": "./assets/images/nina.webp",
 		  "url": " https://zianihiba.github.io/ninacarducci.github.io/",
@@ -42,10 +42,23 @@
 			"postalCode": "33200",
 			"addressCountry": "FR"
 		  },
-		  "telephone": " 05 56 67 78 89",
-		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "telephone": " +3356 67 78 89",
+		  "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "10:00",
+            "closes": "19:00"
+          }
+        ],
 		}
-		</script>
+	</script>
 </head>
 <body>
 <header class="top-header">
