--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Nina Carducci - Photographe professionnelle </title>
+	<title>Nina Carducci - Photographe professionnelle -Bordeaux</title>
+	<meta name="author" content="Nina Carducci" />
+    <meta name="copyright" content="© Nina Carducci" />
 	<meta
 	name="description"
 	content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments."
@@ -15,15 +17,18 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	 <!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
  <!-- Meta donnés pour le référencement facebook -->
-    <meta property="og:title" content="Nina Carducci - Photographe professionnelle">
+    <meta property="og:title" content="Nina Carducci - Photographe professionnelle -Bordeaux">
+	<meta
+	property="og:description"
+	content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments."
+  />
+  <meta property="og:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
+    <meta property="og:url" content=" https://zianihiba.github.io/ninacarducci.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
-    <meta property="og:url" content=" https://zianihiba.github.io/ninacarducci.github.io/">
-    <meta property="og:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
-    <meta property="og:description" content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments .">
  <!--   Twitter Card data  -->
     <meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
 	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments">
 	<meta name="twitter:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
 	<!-- shema.org	 -->
@@ -43,22 +48,9 @@
 			"addressCountry": "FR"
 		  },
 		  "telephone": " +3356 67 78 89",
-		  "openingHoursSpecification": [
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": [
-              "Monday",
-              "Tuesday",
-              "Wednesday",
-              "Thursday",
-              "Friday"
-            ],
-            "opens": "10:00",
-            "closes": "19:00"
-          }
-        ],
+		  "openingHours": "Mo-Fr 10:00-19:00",
 		}
-	</script>
+		</script>
 </head>
 <body>
 <header class="top-header">
@@ -107,10 +99,10 @@
 	</div>
 </div>
 <section id="about">
-	<picture class="picture left">
+	<div class="picture left">
 	 <!-- <source  srcset="./assets/images/slider/ninaMobile_12_11zon.webp" loading="lazy" media="(max-width: 768px)"/>  -->
 		<img src="./assets/images/nina.webp"  alt="La photographe Nina-Carducci">
-	</picture>
+	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
 		<p> class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
@@ -135,8 +127,8 @@
 	</div>
 	<div class="quote">
 		<figure>
-			<blockquote>
-				<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
+			<blockquote class="quote__text">
+				Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
