--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments."
   />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css ">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	 <!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
@@ -33,12 +33,14 @@
 	<meta name="twitter:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
 	<!-- shema.org	 -->
 	<script type="application/ld+json">
+		<!-- schema.org -->
+		<script type="application/ld+json">
 		{
-		  "@context": "http://schema.org",
+		  "@context": "https://schema.org",
 		  "@type": "ProfessionalService",
 		  "name": "Nina Carducci",
 		  "image": "./assets/images/nina.webp",
-		  "url": " https://zianihiba.github.io/ninacarducci.github.io/",
+		  "url": "https://zianihiba.github.io/ninacarducci.github.io/",
 		  "priceRange": "€€",
 		  "address": {
 			"@type": "PostalAddress",
@@ -47,8 +49,8 @@
 			"postalCode": "33200",
 			"addressCountry": "FR"
 		  },
-		  "telephone": " +3356 67 78 89",
-		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "telephone": "+3356 67 78 89",
+		  "openingHours": "Mo-Fr 10:00-19:00"
 		}
 		</script>
 </head>
