--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments">
 	<meta name="twitter:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
 	<!-- shema.org	 -->
-	<script type="application/ld+json">
-		<!-- schema.org -->
-		<script type="application/ld+json">
+	salut essaye plutot comme ça <script type="application/ld+json">
 		{
-		  "@context": "https://schema.org",
+		  "@context": "http://schema.org",
 		  "@type": "ProfessionalService",
 		  "name": "Nina Carducci",
 		  "image": "./assets/images/nina.webp",
