--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle basée à Bordeaux, vous propose l'opportunité de saisir vos merveilleux moments">
 	<meta name="twitter:image" content=" https://zianihiba.github.io/ninacarducci.github.io/assets/images/nina.webp">
 	<!-- shema.org	 -->
-	salut essaye plutot comme ça <script type="application/ld+json">
+	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
 		  "@type": "ProfessionalService",
@@ -101,7 +101,7 @@
 <section id="about">
 	<div class="picture left">
 	 <!-- <source  srcset="./assets/images/slider/ninaMobile_12_11zon.webp" loading="lazy" media="(max-width: 768px)"/>  -->
-		<img src="./assets/images/nina.webp"  alt="La photographe Nina-Carducci">
+		<img src="./assets/images/nina.webp" alt="La photographe Nina-Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -195,7 +195,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp"  loading="lazy" alt="camera">
+			<img src="./assets/images/cameraa (2)_11zon.webp"  loading="lazy" alt="camera">
 		</div>
 	</div>
 </footer>
